crates/velme-cli/tests/snapshots/codes__vl0503_json.snap
---
source: crates/velme-cli/tests/codes.rs
expression: redact(&pretty)
---
{
  "diagnostics": [],
  "format": "velme-cli/1",
  "notices": [],
  "results": [
    {
      "diagnostics": [],
      "goal": "Double",
      "status": "ok"
    },
    {
      "diagnostics": [
        {
          "code": "VL0503",
          "file": "game.velme",
          "help": "check the goal's examples and checks against what its calls give",
          "labels": [],
          "message": "The generated program didn't pass `Both(1)` for `n` is `1`.",
          "notes": [],
          "severity": "error",
          "span": {
            "column": 1,
            "end": 223,
            "line": 8,
            "start": 118
          }
        }
      ],
      "goal": "Both",
      "status": "failed"
    }
  ],
  "status": "failed",
  "summary": {
    "cache_read_tokens": 0,
    "cache_write_tokens": 0,
    "calls": 0,
    "input_tokens": 0,
    "lock_hits": 1,
    "output_tokens": 0,
    "store_hits": 0,
    "synthesized": 0
  }
}
